[gd_scene format=3 uid="uid://ckfblwluotr02"]

[ext_resource type="Script" uid="uid://ds3on1jovim2a" path="res://shards/crucible/things/xydryde_excess/xydryde_excess.gd" id="1_pqw8l"]
[ext_resource type="Script" uid="uid://fg7mxayvxsgv" path="res://lib/thing/scripts/thing_data.gd" id="2_0dugb"]
[ext_resource type="Texture2D" uid="uid://dyi2dcigdqdvf" path="res://shards/crucible/things/xydryde_excess/textures/xydryde_decal.png" id="3_pqw8l"]
[ext_resource type="Material" uid="uid://bxv8vnq41mocc" path="res://generic/materials/mat_tiles.tres" id="4_shy6o"]
[ext_resource type="Texture2D" uid="uid://dn7hffbjqel3a" path="res://shards/crucible/things/xydryde_excess/textures/toxic_mote.png" id="5_3fhp6"]

[sub_resource type="Resource" id="Resource_pqw8l"]
script = ExtResource("2_0dugb")
thing_name = "Xydryde Excess"
aspect = "Torpefying"
metadata/_custom_type_script = "uid://fg7mxayvxsgv"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0dugb"]
height = 3.5
radius = 2.0

[sub_resource type="Animation" id="Animation_shy6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Decal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pqw8l"]
resource_name = "pulse"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Decal:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.9, 0.9, 0.9, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fhp6"]
_data = {
&"RESET": SubResource("Animation_shy6o"),
&"pulse": SubResource("Animation_pqw8l")
}

[sub_resource type="QuadMesh" id="QuadMesh_v6ufk"]
material = ExtResource("4_shy6o")
size = Vector2(10, 10)
orientation = 1

[sub_resource type="Curve" id="Curve_nu44p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.78015566, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_viye2"]
curve = SubResource("Curve_nu44p")

[sub_resource type="Gradient" id="Gradient_dljfo"]
colors = PackedColorArray(3.9106234e-07, 0.21176013, 0.07847882, 1, 0.42366454, 0.61386204, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_72q0j"]
gradient = SubResource("Gradient_dljfo")

[sub_resource type="Curve" id="Curve_5bp72"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2axra"]
curve = SubResource("Curve_5bp72")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_slso1"]
emission_shape = 3
emission_box_extents = Vector3(1.5, 1, 1.5)
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.39999998
gravity = Vector3(0, 0, 0)
scale_min = 0.7
scale_curve = SubResource("CurveTexture_2axra")
color_initial_ramp = SubResource("GradientTexture1D_72q0j")
alpha_curve = SubResource("CurveTexture_viye2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_41s5m"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("5_3fhp6")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_70r7m"]
material = SubResource("StandardMaterial3D_41s5m")
size = Vector2(0.4, 0.8)

[node name="XydrydeExcess" type="Node3D" unique_id=1154639449 node_paths=PackedStringArray("body", "mesh", "selector_point")]
script = ExtResource("1_pqw8l")
body = NodePath("Body")
mesh = NodePath("Decal")
selector_point = NodePath("SelectorPoint")
data = SubResource("Resource_pqw8l")
owned_by_player = false
metadata/_custom_type_script = "uid://v3c7x4mae7v1"

[node name="Body" type="Area3D" parent="." unique_id=1550462523]

[node name="Collision" type="CollisionShape3D" parent="Body" unique_id=715674483]
shape = SubResource("CylinderShape3D_0dugb")

[node name="SelectorPoint" type="Marker3D" parent="." unique_id=1486717263]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Decal" type="Decal" parent="." unique_id=96248883]
size = Vector3(4, 4, 4)
texture_albedo = ExtResource("3_pqw8l")
normal_fade = 0.5
cull_mask = 4

[node name="LethargyTimer" type="Timer" parent="." unique_id=1694119096]

[node name="Pulse" type="AnimationPlayer" parent="." unique_id=376000217]
libraries/ = SubResource("AnimationLibrary_3fhp6")
autoplay = &"pulse"

[node name="Floor" type="MeshInstance3D" parent="." unique_id=1048105057]
visible = false
layers = 5
mesh = SubResource("QuadMesh_v6ufk")

[node name="ToxicMotes" type="GPUParticles3D" parent="." unique_id=317531732]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38153404, 0)
cast_shadow = 0
visibility_range_end = 14.0
visibility_range_end_margin = 1.0
visibility_range_fade_mode = 1
amount = 24
lifetime = 2.0
preprocess = 5.0
randomness = 0.25
process_material = SubResource("ParticleProcessMaterial_slso1")
draw_pass_1 = SubResource("QuadMesh_70r7m")

[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
[connection signal="body_exited" from="Body" to="." method="_on_body_body_exited"]
[connection signal="timeout" from="LethargyTimer" to="." method="_on_lethargy_timer_timeout"]
